OpenRewrite updates (String.format replacements)